--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -5,3 +5,10 @@
     background: #404040;
     margin: 16px;
   }
+  .container{
+    position:absolute;
+    top:0;
+    right:0;
+    bottom:0;
+    left:0;
+  }
