--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,14 +1,118 @@
-
-  /* #components-layout-demo-custom-trigger  */
-  .logo {
-    height: 32px;
-    background: #404040;
-    margin: 16px;
+small {
+    opacity: .6;
   }
-  .container{
-    position:absolute;
-    top:0;
-    right:0;
-    bottom:0;
-    left:0;
+  .text-muted{
+    opacity: .6;
+  }
+  .center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .y-center{
+    display: flex;
+    align-items: center;
+  }
+  .block{
+    display: block;
+  }
+  .inline {
+    display: inline;
+  }
+  .none{
+    display: none;
+  }
+  .b-white {
+    border-color: #ffffff;
+  }
+  .w-full {
+    width: 100%;
+  }
+  
+  .w-auto {
+    width: auto;
+  }
+  
+  .h-auto {
+    height: auto;
+  }
+  
+  .h-full {
+    height: 100%;
+  }
+  
+  .h-v {
+    height: 100vh;
+  }
+  
+  .h-v-5 {
+    height: 50vh;
+  }
+  
+  
+  .pull-left {
+    float: left;
+  }
+  
+  .pull-right {
+    float: right;
+  }
+  
+  .w-40 {
+    width:  40px;
+    height: 40px;
+    line-height: 40px;
+    display: inline-block;
+    text-align: center;
+  }
+  
+  .clear{
+    display: block;
+    overflow: hidden;
+  }
+  
+  .no-padding {
+    .ant-card-body {
+      padding: 0;
+    }
+  }
+  
+  .card-tool {
+    position: absolute;
+    right: 24px;
+    top: 24px;
+  }
+  
+  .list-group {
+    .list-group-item {
+      position: relative;
+      display: block;
+      margin-bottom: -1px;
+      padding: 12px 16px;
+      background: transparent;
+      border: 1px solid #ddd;
+      border-color: rgba(120, 130, 140, 0.065);
+      border-width: 1px 0;
+      &:first-child {
+        border-top-width: 0;
+      }
+      &:last-child {
+        border-bottom-width: 0;
+      }
+    }
+  }
+  
+  .cloud-box {
+    padding: 5px 0;
+  }
+  
+  img {
+    vertical-align: middle;
+  }
+  .img-responsive{
+    width: 100%;
+    height: auto;
+  }
+  .img-circle {
+    border-radius: 50%;
   }
