--- a/src/pages/index/index.css
+++ b/src/pages/index/index.css
@@ -1,4 +1,4 @@
-small {
+/* small {
   opacity: .6;
 }
 .text-muted {
@@ -96,4 +96,108 @@ img {
 }
 .img-circle {
   border-radius: 50%;
+} */
+.cloud-box{
+  padding:5px 0;
+}
+img {
+  vertical-align: middle;
+}
+.img-responsive {
+  width: 100%;
+  height: auto;
+}
+.img-circle {
+  border-radius: 50%;
+}
+.list-group .list-group-item {
+  position: relative;
+  display: block;
+  margin-bottom: -1px;
+  padding: 12px 16px;
+  background: transparent;
+  border: 1px solid #ddd;
+  border-color: rgba(120, 130, 140, 0.065);
+  border-width: 1px 0;
+}
+.list-group .list-group-item:first-child {
+  border-top-width: 0;
+}
+.list-group .list-group-item:last-child {
+  border-bottom-width: 0;
+}
+.w-40 {
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  display: inline-block;
+  text-align: center;
+}
+.pull-left {
+  float: left;
+}
+.pull-right {
+  float: right;
+}
+.clear {
+  display: block;
+  overflow: hidden;
+  margin-left: 5px;
+}
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.y-center {
+  display: flex;
+  align-items: center;
+}
+.block {
+  display: block;
+}
+.inline {
+  display: inline;
+}
+.none {
+  display: none;
+}
+small {
+  opacity: .6;
+}
+.text-muted {
+  opacity: .6;
+}
+.b-white {
+  border-color: #ffffff;
+}
+.w-full {
+  width: 100%;
+}
+.w-auto {
+  width: auto;
+}
+.h-auto {
+  height: auto;
+}
+.h-full {
+  height: 100%;
+}
+.h-v {
+  height: 100vh;
+}
+.h-v-5 {
+  height: 50vh;
+}
+.w-40 {
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  display: inline-block;
+  text-align: center;
+}
+.card-tool {
+  position: absolute;
+  right: 24px;
+  top: 24px;
 }
